<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:gravity="center|left"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/sign_up"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textColor="#673AB7"
            android:textSize="34sp"
            android:textStyle="italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/myTextInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:singleLine="true"
                android:background="#FFFFFF"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/myTextInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:singleLine="true"
                android:background="#FFFFFF"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/myTextInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:singleLine="true"
                android:background="#FFFFFF"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/myTextInputLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:singleLine="true"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/myTextInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_type_password"
                android:singleLine="true"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="#E91E63"
            android:foregroundTint="#E91E63"
            android:text="@string/regester"
            android:textSize="20sp"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/show_info"
            android:textSize="20sp"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dip"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/et_style"
            android:backgroundTint="#77E8F6"
            android:hint="@string/your_name"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#040000"
            android:textSize="20sp"
             />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dip"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/et_style"
            android:backgroundTint="#77E8F6"
            android:padding="10dp"
            android:hint="@string/user_name"
            android:textAlignment="center"
            android:textColor="#040000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dip"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/et_style"
            android:backgroundTint="#77E8F6"
            android:hint="@string/email"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#040000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dip"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/et_style"
            android:backgroundTint="#77E8F6"
            android:hint="@string/password"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#040000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dip"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/et_style"
            android:backgroundTint="#77E8F6"
            android:hint="@string/genger"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#040000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dip"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="#DA56F1"
            android:text="@string/hide_info"
            android:textSize="20sp"
            app:cornerRadius="30dp" />

    </LinearLayout>
</ScrollView>